Collision with buttons on mobile fixed

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -77,6 +77,7 @@ background: none !important;
       margin: 0;
       position: relative;
       padding: 10px;
+     width:20%;
  }
  #about{
    overflow: hidden;
